# ISA-2020-isabot

./: .gitignore  CMakeLists.txt  Makefile  README.md
headers/: CustomException.h  Options.h  SecureSocket.h  isabot.h
src/: CustomException.cpp  Options.cpp  SecureSocket.cpp  isabot.cpp  main.cpp
